macos: install git via homebrew to get the newest version

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -1,3 +1,5 @@
+# Install git in its current version.
+brew "git", link: true
 
 # Install helix (https://helix-editor.com).
 tap "helix-editor/helix"
