Added conda init script

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -16,3 +16,5 @@ brew "mosh", link: true
 brew "imagemagick@6" # v6
 brew "imagemagick"   # v7
 
+# Install miniconda.
+brew "miniconda", link: true
