add `difftastic` to homebrew and git

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -24,3 +24,6 @@ brew "watch", link: true
 
 # Install mcfly (https://github.com/cantino/mcfly).
 brew "mcfly"", link: true
+
+# Install difftastic (https://difftastic.wilfred.me.uk).
+brew "difftastic", link: true
