homebrew: add `mise` and `jdx/tap/usage`

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -27,3 +27,7 @@ brew "mcfly"", link: true
 
 # Install difftastic (https://difftastic.wilfred.me.uk).
 brew "difftastic", link: true
+
+# Install mise (https://github.com/jdx/mise) and "Usage CLI" (https://usage.jdx.dev/cli/).
+brew "mise", link: true
+brew "jdx/tap/usage", link: true
