--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -40,3 +40,6 @@ brew "ncdu", link: true
 
 # Install btop (https://github.com/aristocratos/btop)
 brew "btop", link: true
+
+# Install lazygit (https://github.com/jesseduffield/lazygit)
+brew "lazygit", link: true
