--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -43,3 +43,6 @@ brew "btop", link: true
 
 # Install lazygit (https://github.com/jesseduffield/lazygit)
 brew "lazygit", link: true
+
+# Install act (https://github.com/nektos/act)
+brew "act", link: true
