brewfile: fix syntax error

--- a/homebrew/Brewfile
+++ b/homebrew/Brewfile
@@ -23,7 +23,7 @@ brew "miniconda", link: true
 brew "watch", link: true
 
 # Install mcfly (https://github.com/cantino/mcfly).
-brew "mcfly"", link: true
+brew "mcfly", link: true
 
 # Install difftastic (https://difftastic.wilfred.me.uk).
 brew "difftastic", link: true
